grammar.js
    stylesheet: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.declaration,
        $.rule_set,
        $.import_statement,
        $.media_statement,
        $.charset_statement,
        $.namespace_statement,
        $.keyframes_statement,
        $.supports_statement,
        $.use_statement,
        $.forward_statement,
        $.apply_statement,
        $.mixin_statement,
        $.include_statement,
        $.if_statement,
        $.each_statement,
        $.for_statement,
        $.while_statement,
        $.function_statement,
        $.error_statement,
        $.warn_statement,
        $.debug_statement,
        $.at_rule,
        $.placeholder
      ),

    // Statements

    rule_set: ($) => seq($.selectors, $.block),

    selectors: ($) => sep1(",", choice($._selector)),

    block: ($) =>
      seq(
        "{",
        repeat($._block_item),
        optional(
          alias($.last_declaration, $.declaration)
        ),
        "}"
      ),

    _block_item: ($) =>
      choice(
        $.declaration,
        $.rule_set,
        $.import_statement,
        $.media_statement,
        $.charset_statement,
        $.namespace_statement,
        $.keyframes_statement,
        $.supports_statement,
        $.mixin_statement,
        $.include_statement,
        $.extend_statement,
        $.if_statement,
        $.each_statement,
        $.for_statement,
        $.while_statement,
        $.function_statement,
        $.return_statement,
        $.at_root_statement,
        $.error_statement,
        $.warn_statement,
        $.debug_statement,
        $.at_rule,
        alias($.content_at_rule, $.at_rule)
      ),

    // Selectors

    _selector: ($) =>
      choice(
        $.universal_selector,
        alias($._identifier_with_interpolation, $.tag_name),
        $.class_selector,
        $.nesting_selector,
        $.pseudo_class_selector,
        $.pseudo_element_selector,
        $.id_selector,
        $.attribute_selector,
        $.string_value,
        $.child_selector,
        $.descendant_selector,
        $.sibling_selector,
        $.adjacent_sibling_selector,
        $.namespace_selector,
        $.interpolation
      ),

    nesting_selector: ($) => "&",

    universal_selector: ($) => "*",

    class_selector: ($) =>
      prec(
        1,
        seq(
          optional($._selector),
          choice(
            seq(".", $._no_whitespace),
            $.nesting_selector
          ),
          alias($._identifier_with_interpolation, $.class_name)
        )
      ),

    pseudo_class_selector: ($) =>
      seq(
        optional($._selector),
        alias($._pseudo_class_selector_colon, ':'),
        $._no_whitespace,
        alias($._identifier_with_interpolation, $.class_name),
        optional(alias($.pseudo_class_arguments, $.arguments))
      ),

    pseudo_element_selector: ($) =>
      seq(
        optional($._selector),
        "::",
        $._no_whitespace,
        alias($._identifier_with_interpolation, $.tag_name),
        optional(
          alias($.pseudo_element_arguments, $.arguments)
        )
      ),

    id_selector: ($) =>
      seq(
        optional($._selector),
        "#",
        $._no_whitespace,
        alias($._identifier_with_interpolation, $.id_name)
      ),

    attribute_selector: ($) =>
      seq(
        optional($._selector),
        "[",
        seq(
          alias(
            choice(
              $._identifier_with_interpolation,
              $.namespace_selector
            ),
            $.attribute_name
          ),
          optional(
            seq(
              choice("=", "~=", "^=", "|=", "*=", "$="),
              $._value
            )
          ),
        ),
        "]"
      ),

    child_selector: ($) => prec.left(
      seq(
        $._selector, ">", $._selector
      )
    ),

    descendant_selector: ($) => prec.left(
      seq($._selector, $._descendant_operator, $._selector)
    ),

    sibling_selector: ($) => prec.left(
      seq($._selector, "~", $._selector)
    ),

    adjacent_sibling_selector: ($) => prec.left(
      seq($._selector, "+", $._selector)
    ),

    namespace_selector: ($) => prec.left(
      seq(
        $._selector,
        '|',
        $._selector
      )
    ),

    _value: ($) =>
      prec(
        -1,
        choice(
          alias($._identifier_with_interpolation, $.plain_value),
          $.variable_module,
          alias($.variable_identifier, $.variable_value),
          $.boolean_value,
          $.null_value,
          alias($._plain_value, $.plain_value),
          $.color_value,
          $.integer_value,
          $.float_value,
          $.string_value,
          $.grid_value,
          $.binary_expression,
          $.map_value,
          $.parenthesized_value,
          $.call_expression,
          alias($.nesting_selector, $.nesting_value)
        )
      ),

    // Since a `url` function allows a greater breadth of unquoted characters
    // than would be allowed in any other context, we need a version of
    // `_value` that is allowed to exist inside of `url`. Lots of these would
    // be nonsensical, but they still compile.
    string_value: ($) =>
      choice(
        $._single_quoted_string_value,
        $._double_quoted_string_value
      ),

    _single_quoted_string_value: ($) =>
      seq(
        "'",
        repeat(
          choice(
            $._single_quoted_string_segment,
            $.interpolation
          )
        ),
        "'"
      ),

    _double_quoted_string_value: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $._double_quoted_string_segment,
            $.interpolation
          )
        ),
        '"'
      ),

    // Only used in certain places where SCSS will tolerate an unquoted string
    // that would normally be ambiguous, like a URL.
    integer_value: ($) =>
      seq(
        token(
          seq(
            optional(choice("+", "-")),
            /\d+/
          )
        ),
        optional($.unit)
      ),

    _expression: ($) =>
      choice(
        $.call_expression,
        $.binary_expression
      ),

    arguments: ($) =>
      seq(
        token.immediate("("),
        sep(
          choice(",", ";"),
          repeat1($._value)
        ),
        ")"
      ),

    interpolation: ($) =>
      seq(
        "#{",
        choice(
          $._value,
          $._expression,
        ),
        "}"
      ),

    _identifier_with_interpolation: ($) => prec.left(1,
        repeat1(
          choice(
            $._identifier,
            $.interpolation
          )
        )
      ),
